Fixed the problem of the text not aligning to the left, I had not corrected qouted life in line 27 of our html file

--- a/tribute-page.css
+++ b/tribute-page.css
@@ -47,7 +47,7 @@ body {
   background-color: #002;
 }
 .life-header {
-  text-align: center;
+  text-align: left;
   font-size: 20px;
   font-family: Arial;
   padding: 30px;
